--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>Acecream.GitHub.io</h1>
         <h2></h2>
-        <a href="https://github.com/acecream" class="button"><small>Follow me on</small> GitHub</a>
+        <a href="https://github.com/acecream" class="button"><small>Follow？ me on</small> GitHub</a>
       </div>
     </header>
 
